--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CareerMint AI</title>
+    <title>CarrerX</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <script>
@@ -105,7 +105,8 @@
     "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
     "framer-motion": "https://aistudiocdn.com/framer-motion@^11.0.25",
     "clsx": "https://aistudiocdn.com/clsx@^2.1.0",
-    "tailwind-merge": "https://aistudiocdn.com/tailwind-merge@^2.2.1"
+    "tailwind-merge": "https://aistudiocdn.com/tailwind-merge@^2.2.1",
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.48.1"
   }
 }
 </script>
