--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
     "tailwind-merge": "https://esm.sh/tailwind-merge@^3.4.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.87.1",
     "vite": "https://esm.sh/vite@^7.2.7",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "@google/generative-ai": "https://esm.sh/@google/generative-ai@^0.24.1"
   }
 }
 </script>
