--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/generative-ai": "https://esm.sh/@google/generative-ai@^0.24.1",
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
     "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
